# autogen-ui-ollama

./: .gitignore  README.md  package.json  pyproject.toml
autogenui/: __init__.py  cli.py  manager.py  provider.py  version.py
autogenui/datamodel/: app.py
autogenui/web/: app.py
frontend/: package.json
notebooks/: ollama_team.json  tutorial.ipynb
