[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "autogenui-ollama" 
authors = [
  { name="Solmon", email="solmon@gmail.com" }
]
description = "autogen ui: a ui interface for the autogen library "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "pydantic",  
    "fastapi",
    "typer",
    "uvicorn", 
    "autogen",
    "autogen-agentchat",
    "autogen-ext"
]
optional-dependencies = {web = ["fastapi", "uvicorn"]}

dynamic = ["version"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "autogenui.version.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]  
include = ["autogenui*"]  
exclude = ["*.tests*"]  
namespaces = false  

[tool.setuptools.package-data]
"autogenui" = ["*.*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]


[project.urls]
"Homepage" = "https://github.com/solmon/autogen-ui-ollama"
"Bug Tracker" = "https://github.com/victordibia/autogenui/issues"

[project.scripts]
autogenui = "autogenui.cli:run" 